updated Ref in tth manual
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@2975 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/ttH/Docs/manual.tex
+++ b/ttH/Docs/manual.tex
@@ -76,7 +76,7 @@
 
 %%%%%%%%%% End TeXmacs macros
 
-\title{Manual for  Higgs boson production in association with a top quark pair in the \POWHEGBOXV{}}
+\title{Manual for  Higgs boson production in association with top quarks in the \POWHEGBOXV{}}
 \date{}
 
 \begin{document}
@@ -134,7 +134,7 @@ The events that are ultimately generated in Les Houches format can be processed 
 %
 \begin{thebibliography}{99}
 
-\bibitem{HJRW} H.~B.~Hartanto, B.~J\"ager, L.~Reina, D.~Wackeroth, {\em Higgs production in association with a top quark pair in the POWHEG BOX and SHERPA }, arXiv:1501.xxxxx [hep-ph]. 
+\bibitem{HJRW} H.~B.~Hartanto, B.~J\"ager, L.~Reina, D.~Wackeroth, {\em Higgs boson production in association with top quarks in the POWHEG BOX }, arXiv:1501.04498 [hep-ph]. 
 
 \bibitem{DORW}
   S.~Dawson, L.~H.~Orr, L.~Reina and D.~Wackeroth,
