Wp_Wp_J_J: Fixed documentation for combined lepton species decays
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3028 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/Wp_Wp_J_J/Docs/paper.bib
+++ b/Wp_Wp_J_J/Docs/paper.bib
@@ -2,12 +2,17 @@
       author         = "Melia, Tom and Nason, Paolo and Rontsch, Raoul and
                         Zanderighi, Giulia",
       title          = "{W^+W^+ plus dijet production in the POWHEGBOX}",
+      journal        = "Eur.Phys.J.",
+      volume         = "C71",
+      pages          = "1670",
+      doi            = "10.1140/epjc/s10052-011-1670-x",
       year           = "2011",
-      note           = "* Temporary entry *",
       eprint         = "1102.4846",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1102.4846;%%",
 }
+
 
 @article{Melia:2010bm,
       author         = "Melia, Tom and Melnikov, Kirill and Rontsch, Raoul and
