typo corrected in the documentation file
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3063 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/W_ew-BMNNP/Docs/manual-BOX-WEW.tex
+++ b/W_ew-BMNNP/Docs/manual-BOX-WEW.tex
@@ -169,7 +169,7 @@ necessarily the mass of the charged lepton neutrino system.
 \tmtexttt{runningscale 0 \phantom{aaaa}! choice for ren and fac scales in Bbar integration}\\
 \phantom{pppppppppppppppppppppppppppppp} \tmtexttt{ 0: fixed scale M\_W}\\
 \phantom{pppppppppppppppppppppppppppppp} \tmtexttt{ 1: running scale 
-$l \nu \gamma)$ inv mass}\\ 
+$l \nu (\gamma)$ inv mass}\\ 
 \phantom{pppppppppppppppppppppppppppppppppp} 
 \tmtexttt{ $\gamma$ included with QED FSR }\\ 
 \tmtexttt{scheme 1! choice for EW NLO scheme calculation}\\
