update refs in documentation of bbH
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3114 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/bbH/Docs/manual.tex
+++ b/bbH/Docs/manual.tex
@@ -134,7 +134,7 @@ The events that are ultimately generated in Les Houches format can be processed 
 %
 \begin{thebibliography}{99}
 
-\bibitem{JRW} B.~J\"ager, L.~Reina, D.~Wackeroth, {\em Higgs boson production in association with $b$-jets in the  \POWHEGBOX{}}, arXiv:1509.xxxxx [hep-ph]. 
+\bibitem{JRW} B.~J\"ager, L.~Reina, D.~Wackeroth, {\em Higgs boson production in association with $b$-jets in the  \POWHEGBOX{}}, arXiv:1509.05843 [hep-ph]. 
 
 \bibitem{Dawson:2003kb}
   S.~Dawson, C.~B.~Jackson, L.~Reina and D.~Wackeroth,
